--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -19,6 +19,67 @@
     "settings": "설정",
     "close_theme_builder": "테마 빌더 닫기"
   },
+  "focus_timer": {
+    "title": "집중 타이머",
+    "start": "시작",
+    "pause": "일시정지",
+    "reset": "재설정",
+    "duration_25": "25분",
+    "duration_45": "45분",
+    "duration_60": "60분",
+    "custom_placeholder_min": "분",
+    "custom_placeholder_sec": "초",
+    "set": "설정",
+    "break_time": "휴식 시간!",
+    "focus_time": "집중 시간",
+    "break_message": "잠시 휴식을 취하세요",
+    "focus_message": "집중하고 생산적으로 유지하세요"
+  },
+  "error_page": {
+    "title": "오류 {status} - DesQTA",
+    "error_id": "오류 ID",
+    "hide_details": "숨기기",
+    "show_details": "표시",
+    "details": "세부정보",
+    "error_message": "오류 메시지",
+    "system_health_overview": "시스템 상태 개요",
+    "overall_health": "전체 상태",
+    "network": "네트워크",
+    "storage": "저장소",
+    "items": "항목",
+    "online": "온라인",
+    "offline": "오프라인",
+    "go_to_login": "로그인으로 이동",
+    "go_back": "뒤로",
+    "retry_operation": "다시 시도",
+    "refresh_page": "페이지 새로고침",
+    "advanced_troubleshooting": "고급 문제 해결",
+    "go_home": "홈으로",
+    "mark_as_resolved": "해결됨으로 표시",
+    "recommended_actions": "권장 조치",
+    "performance_issues_detected": "성능 문제 감지됨",
+    "recent_errors": "최근 오류",
+    "detailed_error_info": "자세한 오류 정보",
+    "error_context": "오류 컨텍스트",
+    "environment": "환경",
+    "stack_trace": "스택 추적",
+    "complete_error_report": "전체 오류 보고서",
+    "dev_debug_info": "개발 디버그 정보:",
+    "type_auth": "인증 오류",
+    "type_not_found": "페이지를 찾을 수 없음",
+    "type_network": "네트워크 오류",
+    "type_performance": "성능 문제",
+    "type_server": "서버 오류",
+    "type_critical": "심각한 오류",
+    "type_app": "응용 프로그램 오류",
+    "desc_auth": "이 페이지에 액세스하려면 로그인하세요.",
+    "desc_not_found": "찾으시는 페이지가 존재하지 않습니다.",
+    "desc_network": "서버에 연결할 수 없습니다. 인터넷 연결을 확인하세요.",
+    "desc_performance": "애플리케이션에 성능 문제가 발생했습니다.",
+    "desc_server": "문제가 발생했습니다. 나중에 다시 시도해 주세요.",
+    "desc_critical": "즉시 조치가 필요한 심각한 오류가 발생했습니다.",
+    "desc_default": "예기치 않은 오류가 발생했습니다. 다시 시도해 주세요."
+  },
   "connectivity": {
     "offline": "오프라인입니다",
     "offline_desc": "일부 기능이 제한될 수 있습니다. 데이터는 캐시에서 가져옵니다.",
@@ -50,6 +111,11 @@
     "menu": "메뉴",
     "qr_signin": "QR 로그인",
     "welcome": "환영합니다"
+  },
+  "pages_menu": {
+    "search_placeholder": "페이지 검색...",
+    "navigate": "이동",
+    "select": "선택"
   },
   "header": {
     "toggle_sidebar": "사이드바 토글",
@@ -97,7 +163,9 @@
     "feature_assessments_desc": "View assignments",
     "feature_timetable_desc": "Class schedule",
     "feature_analytics_desc": "Performance data",
-    "feature_settings_desc": "App preferences"
+    "feature_settings_desc": "App preferences",
+    "fill_all_fields": "모든 필드를 입력해 주세요",
+    "failed_credentials": "로그인에 실패했습니다. 자격 증명을 확인하세요."
   },
   "features": {
     "lightning_fast": "Lightning-fast performance",
@@ -233,6 +301,8 @@
     "lesson_resources": "Lesson Resources"
   },
   "goals": {
+    "no_cached_data": "캐시된 데이터가 없습니다",
+    "invalid_response": "잘못된 응답 형식",
     "loading_years": "연도 로드 중...",
     "error_loading_years": "연도 로드 오류",
     "no_years_available": "사용 가능한 연도 없음",
@@ -279,6 +349,8 @@
     "sort_unread": "읽지 않은 수",
     "sort_asc": "오름차순 정렬",
     "sort_desc": "내림차순 정렬",
+    "no_cached_data": "캐시된 데이터가 없습니다",
+    "invalid_response": "잘못된 응답 형식",
     "sort_recent_first": "최신순",
     "sort_oldest_first": "오래된순",
     "sort_by_author": "작성자별",
@@ -287,6 +359,7 @@
     "not_enabled_message": "포럼이 학교에 대해 활성화되지 않았습니다. 이것이 오류라고 생각되면 관리자에게 문의하세요."
   },
   "folios": {
+    "invalid_response": "잘못된 응답 형식",
     "edit_my_folios": "내 포트폴리오 편집",
     "edit_my_folios_description": "개인 포트폴리오 만들기 및 관리",
     "browse_folios": "포트폴리오 둘러보기",
@@ -305,6 +378,7 @@
     "save_error": "포트폴리오 저장 실패",
     "new_folio": "새 포트폴리오",
     "creating": "만드는 중...",
+    "created_success": "포트폴리오가 성공적으로 생성되었습니다",
     "create_error": "포트폴리오 생성 실패",
     "tags": "태그",
     "add_tag_placeholder": "태그 추가...",
@@ -331,6 +405,11 @@
     "not_enabled_message": "포트폴리오가 계정에 대해 활성화되지 않았습니다."
   },
   "assessments": {
+    "back_to_assessments": "평가로 돌아가기",
+    "status_marked": "채점됨",
+    "status_overdue": "기한 초과",
+    "status_due_soon": "곧 마감",
+    "status_upcoming": "예정",
     "year": "Year:",
     "view": "View:",
     "list_view": "List View",
@@ -435,6 +514,7 @@
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
+    "failed_to_load_no_cache": "메시지를 불러올 수 없고 캐시된 데이터도 없습니다",
     "failed_to_load_message": "Failed to load message.",
     "no_content": "No content.",
     "seqta_messages": "SEQTA Messages",
@@ -473,7 +553,15 @@
     "sending": "Sending...",
     "send": "Send",
     "failed_to_load_recipients": "Failed to load recipients. Please try again.",
-    "failed_to_send": "Failed to send message. Please try again."
+    "failed_to_send": "Failed to send message. Please try again.",
+    "message_starred": "메시지에 별표 추가됨",
+    "message_unstarred": "메시지 별표 제거됨",
+    "failed_to_update_star": "별표 상태 업데이트 실패",
+    "deleted_success": "메시지가 성공적으로 삭제되었습니다",
+    "delete_failed": "메시지 삭제 실패",
+    "restored_success": "메시지가 성공적으로 복원되었습니다",
+    "restore_failed": "메시지 복원 실패",
+    "message_detail": "메시지 상세"
   },
   "settings": {
     "saved": "Saved!",
@@ -576,6 +664,16 @@
   },
   "analytics": {
     "description": "시간에 따른 학업 성과와 진행 상황 추적",
+    "syncing": "동기화 중...",
+    "last_updated": "마지막 업데이트",
+    "sync_failed": "동기화 실패. 캐시된 데이터를 표시합니다.",
+    "sync_success": "분석 데이터가 성공적으로 동기화되었습니다",
+    "sync_error": "분석 데이터 동기화 실패",
+    "syncing_automatically": "이 페이지를 방문하면 데이터가 자동으로 동기화됩니다.",
+    "time_just_now": "방금",
+    "time_minutes_ago": "{count}분 전",
+    "time_hours_ago": "{count}시간 전",
+    "time_days_ago": "{count}일 전",
     "failed_to_grab_data": "분석 데이터를 가져오고 저장하는 데 실패했습니다.",
     "failed_to_delete_data": "분석 데이터 삭제 실패",
     "delete_data": "데이터 삭제",
@@ -655,6 +753,7 @@
   },
   "directory": {
     "description": "모든 학생 검색 및 탐색",
+    "failed_to_load": "학생 목록을 불러오지 못했습니다",
     "filters": "필터",
     "filter_students": "학생 필터링",
     "year_level": "학년",
@@ -685,7 +784,9 @@
     "label": "라벨:",
     "all": "전체",
     "loading": "공지사항 로드 중...",
-    "no_notices_found": "선택한 기준에 맞는 공지사항을 찾을 수 없습니다."
+    "no_notices_found": "선택한 기준에 맞는 공지사항을 찾을 수 없습니다.",
+    "view_all": "모두 보기",
+    "no_notices_today": "오늘 사용 가능한 공지가 없습니다."
   },
   "reports": {
     "failed_to_load": "보고서 로드 실패.",
