--- a/src/lib/i18n/locales/nl.json
+++ b/src/lib/i18n/locales/nl.json
@@ -19,6 +19,67 @@
     "settings": "Instellingen",
     "close_theme_builder": "Thema Builder Sluiten"
   },
+  "focus_timer": {
+    "title": "Focustimer",
+    "start": "Start",
+    "pause": "Pauze",
+    "reset": "Reset",
+    "duration_25": "25m",
+    "duration_45": "45m",
+    "duration_60": "60m",
+    "custom_placeholder_min": "mm",
+    "custom_placeholder_sec": "ss",
+    "set": "Instellen",
+    "break_time": "Pauze!",
+    "focus_time": "Focustijd",
+    "break_message": "Neem een korte pauze",
+    "focus_message": "Blijf gefocust en productief"
+  },
+  "error_page": {
+    "title": "Fout {status} - DesQTA",
+    "error_id": "Fout-ID",
+    "hide_details": "Verbergen",
+    "show_details": "Tonen",
+    "details": "Details",
+    "error_message": "Foutmelding",
+    "system_health_overview": "Systeemstatusoverzicht",
+    "overall_health": "Algemene status",
+    "network": "Netwerk",
+    "storage": "Opslag",
+    "items": "items",
+    "online": "Online",
+    "offline": "Offline",
+    "go_to_login": "Naar inloggen",
+    "go_back": "Terug",
+    "retry_operation": "Opnieuw proberen",
+    "refresh_page": "Pagina vernieuwen",
+    "advanced_troubleshooting": "Geavanceerd probleemoplossen",
+    "go_home": "Naar home",
+    "mark_as_resolved": "Markeer als opgelost",
+    "recommended_actions": "Aanbevolen acties",
+    "performance_issues_detected": "Prestatieproblemen gedetecteerd",
+    "recent_errors": "Recente fouten",
+    "detailed_error_info": "Gedetailleerde foutinformatie",
+    "error_context": "Foutcontext",
+    "environment": "Omgeving",
+    "stack_trace": "Stack trace",
+    "complete_error_report": "Volledig foutrapport",
+    "dev_debug_info": "Ontwikkelingsdebuginformatie:",
+    "type_auth": "Authenticatiefout",
+    "type_not_found": "Pagina niet gevonden",
+    "type_network": "Netwerkfout",
+    "type_performance": "Prestatieprobleem",
+    "type_server": "Serverfout",
+    "type_critical": "Kritieke fout",
+    "type_app": "Applicatiefout",
+    "desc_auth": "Log in om deze pagina te openen.",
+    "desc_not_found": "De pagina die u zoekt bestaat niet.",
+    "desc_network": "Kan geen verbinding maken met de server. Controleer uw internetverbinding.",
+    "desc_performance": "De applicatie ervaart prestatieproblemen.",
+    "desc_server": "Er is iets misgegaan. Probeer het later opnieuw.",
+    "desc_critical": "Er is een kritieke fout opgetreden die directe aandacht vereist.",
+    "desc_default": "Er is iets onverwachts gebeurd. Probeer het opnieuw."
+  },
   "connectivity": {
     "offline": "U bent offline",
     "offline_desc": "Sommige functies kunnen beperkt zijn. Gegevens komen uit de cache.",
@@ -50,6 +111,11 @@
     "menu": "Menu",
     "qr_signin": "QR Inloggen",
     "welcome": "Welkom"
+  },
+  "pages_menu": {
+    "search_placeholder": "Pagina's zoeken...",
+    "navigate": "Navigeren",
+    "select": "Selecteren"
   },
   "header": {
     "toggle_sidebar": "Zijbalk wisselen",
@@ -97,7 +163,9 @@
     "feature_assessments_desc": "Bekijk opdrachten",
     "feature_timetable_desc": "Lesrooster",
     "feature_analytics_desc": "Prestatiegegevens",
-    "feature_settings_desc": "App voorkeuren"
+    "feature_settings_desc": "App voorkeuren",
+    "fill_all_fields": "Vul alle velden in",
+    "failed_credentials": "Inloggen mislukt. Controleer uw inloggegevens."
   },
   "features": {
     "lightning_fast": "Bliksemsnelle prestaties",
@@ -233,6 +301,8 @@
     "lesson_resources": "Lesson Resources"
   },
   "goals": {
+    "no_cached_data": "Geen gecachte gegevens beschikbaar",
+    "invalid_response": "Ongeldig antwoordformaat",
     "loading_years": "Jaren laden...",
     "error_loading_years": "Fout bij het laden van jaren",
     "no_years_available": "Geen jaren beschikbaar",
@@ -279,6 +349,8 @@
     "sort_unread": "Aantal ongelezen",
     "sort_asc": "Oplopend sorteren",
     "sort_desc": "Aflopend sorteren",
+    "no_cached_data": "Geen gecachte gegevens beschikbaar",
+    "invalid_response": "Ongeldig antwoordformaat",
     "sort_recent_first": "Meest recent eerst",
     "sort_oldest_first": "Oudste eerst",
     "sort_by_author": "Op auteur",
@@ -287,6 +359,7 @@
     "not_enabled_message": "Forums zijn niet ingeschakeld voor uw school. Neem contact op met uw beheerder als u denkt dat dit een fout is."
   },
   "folios": {
+    "invalid_response": "Ongeldig antwoordformaat",
     "edit_my_folios": "Mijn portefeuilles bewerken",
     "edit_my_folios_description": "Maak en beheer uw persoonlijke portefeuilles",
     "browse_folios": "Portefeuilles doorbladeren",
@@ -305,6 +378,7 @@
     "save_error": "Portefeuille opslaan mislukt",
     "new_folio": "Nieuwe Portefeuille",
     "creating": "Aanmaken...",
+    "created_success": "Portefeuille succesvol aangemaakt",
     "create_error": "Portefeuille aanmaken mislukt",
     "tags": "TAGS",
     "add_tag_placeholder": "Tag toevoegen...",
@@ -331,6 +405,11 @@
     "not_enabled_message": "Portefeuilles zijn niet ingeschakeld voor uw account."
   },
   "assessments": {
+    "back_to_assessments": "Terug naar beoordelingen",
+    "status_marked": "Beoordeeld",
+    "status_overdue": "Te laat",
+    "status_due_soon": "Binnenkort",
+    "status_upcoming": "Binnenkort",
     "year": "Year:",
     "view": "View:",
     "list_view": "List View",
@@ -435,6 +514,7 @@
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
+    "failed_to_load_no_cache": "Failed to load messages and no cached data available",
     "failed_to_load_message": "Failed to load message.",
     "no_content": "No content.",
     "seqta_messages": "SEQTA Messages",
@@ -473,7 +553,15 @@
     "sending": "Sending...",
     "send": "Send",
     "failed_to_load_recipients": "Failed to load recipients. Please try again.",
-    "failed_to_send": "Failed to send message. Please try again."
+    "failed_to_send": "Failed to send message. Please try again.",
+    "message_starred": "Bericht gemarkeerd met ster",
+    "message_unstarred": "Ster verwijderd van bericht",
+    "failed_to_update_star": "Kon sterstatus niet bijwerken",
+    "deleted_success": "Bericht succesvol verwijderd",
+    "delete_failed": "Kon bericht niet verwijderen",
+    "restored_success": "Bericht succesvol hersteld",
+    "restore_failed": "Kon bericht niet herstellen",
+    "message_detail": "Berichtdetails"
   },
   "settings": {
     "saved": "Saved!",
@@ -576,6 +664,16 @@
   },
   "analytics": {
     "description": "Volg je academische prestaties en voortgang in de loop van de tijd",
+    "syncing": "Synchroniseren...",
+    "last_updated": "Laatst bijgewerkt",
+    "sync_failed": "Synchronisatie mislukt. Cachegegevens worden weergegeven.",
+    "sync_success": "Analysesgegevens succesvol gesynchroniseerd",
+    "sync_error": "Synchronisatie van analysesgegevens mislukt",
+    "syncing_automatically": "Gegevens synchroniseren automatisch bij het bezoeken van deze pagina.",
+    "time_just_now": "Zojuist",
+    "time_minutes_ago": "{count} minuut(en) geleden",
+    "time_hours_ago": "{count} uur geleden",
+    "time_days_ago": "{count} dag(en) geleden",
     "failed_to_grab_data": "Gegevens ophalen en opslaan mislukt.",
     "failed_to_delete_data": "Analysesgegevens verwijderen mislukt",
     "delete_data": "Gegevens Verwijderen",
@@ -655,6 +753,7 @@
   },
   "directory": {
     "description": "Blader en zoek door alle studenten",
+    "failed_to_load": "Studenten laden mislukt",
     "filters": "Filters",
     "filter_students": "Studenten Filteren",
     "year_level": "Jaarniveau",
@@ -685,7 +784,9 @@
     "label": "Label:",
     "all": "Alles",
     "loading": "Mededelingen laden...",
-    "no_notices_found": "Geen mededelingen gevonden voor de geselecteerde criteria."
+    "no_notices_found": "Geen mededelingen gevonden voor de geselecteerde criteria.",
+    "view_all": "Alles bekijken",
+    "no_notices_today": "Geen mededelingen beschikbaar vandaag."
   },
   "reports": {
     "failed_to_load": "Rapporten laden mislukt.",
